--- a/index.html
+++ b/index.html
@@ -183,15 +183,31 @@
                         </div>
                     </div>
                 </div>
-            </div>   
-            <div class="filter-form ms-5">
-                <input type="text" id="filterPriceInputMin">
-                <input type="text" id="filterPriceInputMax">
-                <button id="filterPriceButton">Submit</button>
             </div>
+            <div class="filter-block">
+                <h2>Cena</h2>
+                <div class="slider">
+                    <div class="progress"></div>
+                </div>
+                <div class="range-input">
+                    <input type="range" class="range-min" min="0" max="10000" value="2500" step="100">
+                    <input type="range" class="range-max" min="0" max="10000" value="7500" step="100">
+                </div>
+                <div class="price-input">
+                    <div class="field">
+                        <input type="number" class="input-min" value="2500">
+                    </div>
+                    <div class="separator">-</div>
+                    <div class="field">
+                        <input type="number" class="input-max" value="7500">
+                    </div>
+                </div>
+                <button class="btn btn-primary btn-md w-100" id="filterPriceButton">Submit</button>
+            </div>   
         </div>
     </main>
    
+    
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
