--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="progress"></div>
                 </div>
                 <div class="range-input">
-                    <input type="range" class="range-min" min="0" max="10000" value="2500" step="100">
+                    <input type="range" id="inputMinRange" class="range-min" min="0" max="10000" value="2500" step="100">
                     <input type="range" class="range-max" min="0" max="10000" value="7500" step="100">
                 </div>
                 <div class="price-input">
@@ -202,7 +202,7 @@
                         <input type="number" class="input-max" value="7500">
                     </div>
                 </div>
-                <button class="btn btn-primary btn-md w-100" id="filterPriceButton">Submit</button>
+                <button class="btn btn-primary btn-md w-100" id="filterPriceButton">Filter</button>
             </div>   
         </div>
     </main>
