--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <main>
         <div class="container main-block d-flex">
+            <!-- List of data -->
             <div class="list-products">
                 <div data-title="AKT 8090/NE" class="col-12 col-md-12 col-lg-12 col-xl-12 col-xxl-6 mb-3 prodSlot catLabel10">
                     <div draggable="true" class="card productCard shadow-sm mx-auto context-menu-one" style="width: 378px; height: 274px;" data-bs-mediaurl="files/230201/113554/AKT-8090-NE.jpeg" id="item597">
@@ -184,6 +185,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Filter block -->
             <div class="filter-block">
                 <h2>Cena</h2>
                 <div class="slider">
@@ -207,8 +210,6 @@
         </div>
     </main>
    
-    
-
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
